commit from intellij

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,8 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 <display-name>Archetype Created Web Application</display-name>
 <!-- spring配置文件位置 -->
@@ -43,11 +44,9 @@
 </listener>
 
 <!-- 修复数据库监听器 -->
-    <!--
 <listener>
-    <listener-class>sy.listener.RepairListener</listener-class>
+    <listener-class>com.xiechur.listener.RepairListener</listener-class>
 </listener>
-    -->
 <welcome-file-list>
     <welcome-file>/index.jsp</welcome-file>
 </welcome-file-list>
