--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,7 +9,7 @@ driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 jdbc_url=jdbc:mysql://localhost:3306/db_jsp01?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=root
-jdbc_password=19950802
+jdbc_password=123456
 
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #driverClassName=net.sourceforge.jtds.jdbc.Driver
